// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glam react attr 1`] = `
<h1
  className="css-15vt02v-1mu1h6y"
  fontSize={48}
/>
`;

exports[`glam react basic render 1`] = `
<h1
  className="css-13wdnau-1ejkrg"
>
  hello world
</h1>
`;

exports[`glam react call expression 1`] = `
<h1
  className="legacy__class css-13wdnau-1ejkrg"
>
  hello world
</h1>
`;

exports[`glam react composition 1`] = `
<h1
  className="legacy__class css-vxb7tq-tlgws4 css-13wdnau-1ejkrg"
>
  hello world
</h1>
`;

exports[`glam react fragments 1`] = `
<h1
  className="legacy__class css-vxb7tq-1qdhtcv css-91i0rz-xcpsbd"
  scale={2}
>
  hello world
</h1>
`;

exports[`glam react function in expression 1`] = `
<h1
  className="legacy__class css-vxb7tq-1qdhtcv css-13wdnau-1ejkrg"
  scale={2}
>
  hello world
</h1>
`;

exports[`glam react higher order component 1`] = `
<div
  className="css-o7j1h0 css-13wdnau-1ejkrg"
/>
`;
